--- a/TODO.txt
+++ b/TODO.txt
@@ -8,8 +8,6 @@
 * [compilation] Add support for .fble.@ files and module compilation.
 
 * [cleanup] Avoid duplicating code between fble-stdio and fble-compiled-stdio.
-* [cleanup] Factor out common logic in typecheck and compile for looking up a
-  module dependency's index?
 * [cleanup] For things like FbleValueAddRef, is it okay if dst is NULL?
  - It would be convenient for constructing things in case of error.
  - I'm not sure if there's any performance implications.
@@ -22,7 +20,7 @@
 
 * [build] Decide whether individual test failures should fail to build or not.
   If they should fail to build, then tools/tests.tcl could be simplified?
-* [build] Figure out how to do code coverage with ninja.
+* [build] Figure out a nice way to do code coverage with ninja.
 
 * [tests] Test use of undefined values in case, access, and func apply.
 * [tests] Any way to improve memory growth tests?
