Use an implicit global arena for allocations.
Instead of passing around FbleArena* everywhere.

Motivations:
* This way we can easily remove the arena field from FbleHeap* rather than
  have to pass a separate FbleArena* around everywhere we pass a heap around
  or define a function to get the arena when we go to make FbleHeap an
  abstract data type.

* We don't have to worry about keeping track of which objects are allocated
  with which arenas. Things probably only work reasonably well in practice
  today because we assume every instance of FbleArena* is the same. May as
  well bake that into the interface.

* The original motivation for using arenas to support bulk free is no longer a
  supported feature of arenas. Because we require users to free all
  allocations explicitly, there is less motivation to allow users to organize
  allocations into different arenas.

* It's convenient not to have to pass FbleArena around everywhere and not to
  have to document it everywhere.

Some potential downsides:
* We no longer have an FbleArena* argument to document what functions may
  interact with allocations. Though arguably you could already just allocate
  your own FbleArena internally and not mention it to the user, and we were
  doing that in a couple of places.

* The max total bytes allocated feature doesn't seem like it will compose
  well. It only works if you have one user tracking things at a time. In
  practice the use of max total bytes allocated is very specific to testing
  memory behavior, so I think this is okay. And the new interface gives more
  fine grained control over which allocations to track, because we don't have
  to make sure all the allocation we want to track are done in different
  arenas from allocations we don't want to track as much. We could always add
  a better, more composable interface for allocation tracking later if desired.

I'm not totally convinced this change is the right thing to do, but let's give
it a try and see how it goe

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,14 @@
+* Arena cleanup arguments
+ - You could always call FbleNewArena and FbleFreeArena internally anyway.
+   This way we ensure all fble based allocations are tracked for memory leaks
+   and max memory use.
+ - Don't need FbleHeap to make FbleArena visible.
+ - Don't have to worry about keeping track of who is using which arena.
+ - Don't have to pass FbleArena* around everywhere explicitly.
+
+* Clean up fble-mem-test now that we don't have to use separate arenas for
+  different phases of compilation.
+
 * [compilation] Cleanup API between execute/value/interpret/generated code?
  - Make FbleExecutable a proper abstract type.
  - Can I cleanup/break the dependency cycle between execute.h and value.h?
