--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,7 @@
-* [perf] Try inlining FbleRetainValue and FbleReleaseValue calls.
- - See if it makes a noticeable performance difference.
-
-* [perf] Don't bother trying to reuse a stack frame in tail call. I bet
-  performance is better if we allocate a whole new frame if it lets us avoid
-  two allocations instead of one every time we allocate a stack frame.
-
 * [perf] Consider making a custom stack-based allocator to use for the
   execution stacks?
 
-* [compilation] Cleanup API between execute/value/interpret/generated code?
+* [compilation] Cleanup API between execute/value/interpret/generated code.
  - Make FbleExecutable a proper abstract type.
  - Can I cleanup/break the dependency cycle between execute.h and value.h?
  - Should definition of FbleThread* be private to execute.c?
